CORE-7083 Actualizar métodos del ResourceApi